@@ -1,3 +1,11 @@
+AUX fontconfig.Gentoo.properties 10932 RMD160 ce1fb555f3f5f281f328c8016e12407ac0893819 SHA1 59f68c06f4f727bc72449a76bd4941cbee626373 SHA256 893b469c87ba547122fe158941c00512bf3f15046251f4b8639d967203d32bc1
+MD5 494118498b85e238421b123a4ba16347 files/fontconfig.Gentoo.properties 10932
+RMD160 ce1fb555f3f5f281f328c8016e12407ac0893819 files/fontconfig.Gentoo.properties 10932
+SHA256 893b469c87ba547122fe158941c00512bf3f15046251f4b8639d967203d32bc1 files/fontconfig.Gentoo.properties 10932
+AUX sun-jdk-1.5.env 925 RMD160 6042c2849330d0a7b7ef87f2680209a27707a370 SHA1 d93a7e7bad03e089efdd9c549671825e96ba3d55 SHA256 9faf2bfbdec7fd92e6fc3509a22ae8ec9a3527d850f9763cef42575e0dec13fe
+MD5 9b9e4337c1fb2f73b1adad1db1e01325 files/sun-jdk-1.5.env 925
+RMD160 6042c2849330d0a7b7ef87f2680209a27707a370 files/sun-jdk-1.5.env 925
+SHA256 9faf2bfbdec7fd92e6fc3509a22ae8ec9a3527d850f9763cef42575e0dec13fe files/sun-jdk-1.5.env 925
 AUX sun-jdk-1.6.env 925 RMD160 addfe5f88916dd01b36ed9ffbdb70edf45db7af7 SHA1 6cce3e81e6f23236d3b563ff8746bd4b144554d1 SHA256 1b8d64c945cbb6b6847a6cac6d7f3e17a1ea3c280aab5da1ea11a9aebcb57009
 MD5 6304b2fe34394d6214e48cbbe7389772 files/sun-jdk-1.6.env 925
 RMD160 addfe5f88916dd01b36ed9ffbdb70edf45db7af7 files/sun-jdk-1.6.env 925
@@ -6,10 +14,16 @@ AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2e
 MD5 095bd3019f41594de107fab06efe56aa files/sun-jdk-1.7.env 925
 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e files/sun-jdk-1.7.env 925
 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581 files/sun-jdk-1.7.env 925
+DIST jdk-1_5_0_10-dlj-linux-amd64.bin 43906073 RMD160 2d13d637b6d7351410f9e18d581206a05091effe SHA1 b0c4440f7059b2d477a437e5c58f135820e86326 SHA256 5bbac3fb78db48f7f996e412d45229db3a0b759886f360504cca61c93d4b5f61
+DIST jdk-1_5_0_10-dlj-linux-i586.bin 49553457 RMD160 8aa7b53064831d800b8aeae67ffd3f5e4e2e3155 SHA1 fc4883d6da60940cbe4b6c2575478cead26313ff SHA256 e4300d88ae630f02132a4ce23afbdc40f994de91b37d4b64cb1da0b58df678fa
 DIST jdk-6-rc-bin-b104-linux-amd64-01_nov_2006.bin 56218016 RMD160 cc3edc27a78a3ee08cb55e7ffc20ff4207e05308 SHA1 e568d226226ee50a265dca587a3240cc3fc5874f SHA256 d8c5b401b1326e5b1fe0de66bcf3f0f7d24dbb360afb0d9c64406181ea82947c
 DIST jdk-6-rc-bin-b104-linux-i586-01_nov_2006.bin 62581289 RMD160 273d29fdbe02c1c0ad86418d91247f16edccec2d SHA1 91d1c8c8c58be83d57374e32aa24747ae7fe6eb8 SHA256 35e4ac081557ad7a790a5275beea1fb7a446e9d67053bdb68f4d9e0a2c0a962b
 DIST jdk-7-ea-bin-b02-linux-amd64-08_nov_2006.bin 56216291 RMD160 d4b527c617469f7e3d731a8da742769a82a9bbdc SHA1 96eec99073f6351f671b2ac2c53a59e84d792af6 SHA256 8debcf78ffbf5acbc46cec213798a21adc9927e9c978816eb985949524a0e735
 DIST jdk-7-ea-bin-b02-linux-i586-08_nov_2006.bin 62577382 RMD160 b067db8c29e4d1dca4eeedca7e0bc6839e078cce SHA1 321b99265f5c3852a0071495fad6262d98029c81 SHA256 50205b0fa9a1b7c10e225575472b28ba851024334c3887230287152c67700718
+EBUILD sun-jdk-1.5.0.10.ebuild 4660 RMD160 af2d8ee8c65d6cfeb9878c33a12097212c7f7384 SHA1 82281e56a924eba73d96062a0dad4f5fcaeb402f SHA256 e8f51491d873044fae289e40923940e4ff106a29d81130e1943c6da3546687b3
+MD5 139f51c75b8679b1cb79fa3dff785e75 sun-jdk-1.5.0.10.ebuild 4660
+RMD160 af2d8ee8c65d6cfeb9878c33a12097212c7f7384 sun-jdk-1.5.0.10.ebuild 4660
+SHA256 e8f51491d873044fae289e40923940e4ff106a29d81130e1943c6da3546687b3 sun-jdk-1.5.0.10.ebuild 4660
 EBUILD sun-jdk-1.6.0.0_rc104.ebuild 4689 RMD160 863aa094ccfbf76a85da1714075e0938dff423a3 SHA1 d57bee7e55ea28c1f363d3551bcb9643d1575f63 SHA256 545ee9526062aeccf319770ef844bdf5a8000133fda4d6ec4aef8ed6447a3469
 MD5 fe2d728981c53204701804fc25de34f2 sun-jdk-1.6.0.0_rc104.ebuild 4689
 RMD160 863aa094ccfbf76a85da1714075e0938dff423a3 sun-jdk-1.6.0.0_rc104.ebuild 4689
@@ -18,10 +32,13 @@ EBUILD sun-jdk-1.7.0.0_alpha02.ebuild 5367 RMD160 56a28e81e125f2bf54330647269fa1
 MD5 1af7fe0df7963228bc411f40bf70d25b sun-jdk-1.7.0.0_alpha02.ebuild 5367
 RMD160 56a28e81e125f2bf54330647269fa1341d26e5fe sun-jdk-1.7.0.0_alpha02.ebuild 5367
 SHA256 55d77e4ecb9f03562e7edfd07fcea47098f2f94a8ba184ab2ba840fed28949af sun-jdk-1.7.0.0_alpha02.ebuild 5367
-MISC ChangeLog 1042 RMD160 e9c9eebd12e433cd2a400b2e9bc4fd04bdda57a1 SHA1 7830662dfc72aa4e241b4007017e4ca51f3275c0 SHA256 db3bfe7a9f130c977bf88ef45c2df3c9e8d2259a7a201aef1521afb91b2c35a3
-MD5 fca233e13e512c1894bfd2d905b9d63c ChangeLog 1042
-RMD160 e9c9eebd12e433cd2a400b2e9bc4fd04bdda57a1 ChangeLog 1042
-SHA256 db3bfe7a9f130c977bf88ef45c2df3c9e8d2259a7a201aef1521afb91b2c35a3 ChangeLog 1042
+MISC ChangeLog 1235 RMD160 243359ecc09297e3d747a4994d5af3eb68301ee6 SHA1 e6774589a240e87e4809ac3d7bde1336759778ef SHA256 be82178632f9ce9a02ba4d86357bafc5e75fa4e26500b6d86a85d6eb0643cd13
+MD5 97e17fb86159e4200d3cb3722b88ed13 ChangeLog 1235
+RMD160 243359ecc09297e3d747a4994d5af3eb68301ee6 ChangeLog 1235
+SHA256 be82178632f9ce9a02ba4d86357bafc5e75fa4e26500b6d86a85d6eb0643cd13 ChangeLog 1235
+MD5 bfc73dd88d30c26b64d0590cb52d7547 files/digest-sun-jdk-1.5.0.10 563
+RMD160 ce0632d08fdd27b76bd6e2de244a0516555aeef0 files/digest-sun-jdk-1.5.0.10 563
+SHA256 f1f582a1bfca18c6375dc35e75bd199066d2361ffbf7e577a592afb4b351e34d files/digest-sun-jdk-1.5.0.10 563
 MD5 f360dcf8347cca9cd439012184e48454 files/digest-sun-jdk-1.6.0.0_rc104 641
 RMD160 9798524286d787807f99ef2b28170546f6f72b96 files/digest-sun-jdk-1.6.0.0_rc104 641
 SHA256 fb75e615f1c8c251f59edb254516d4e3b50d085fc9c42e02a4e8c0ae9da10dec files/digest-sun-jdk-1.6.0.0_rc104 641
