@@ -1,0 +1,6 @@
+MD5 eca3b5106aa3cb0469ea01b96dc70510 jdk-1_5_0_10-dlj-linux-amd64.bin 43906073
+RMD160 2d13d637b6d7351410f9e18d581206a05091effe jdk-1_5_0_10-dlj-linux-amd64.bin 43906073
+SHA256 5bbac3fb78db48f7f996e412d45229db3a0b759886f360504cca61c93d4b5f61 jdk-1_5_0_10-dlj-linux-amd64.bin 43906073
+MD5 baa5f71d72d1d4d7c38374d59bedfe7c jdk-1_5_0_10-dlj-linux-i586.bin 49553457
+RMD160 8aa7b53064831d800b8aeae67ffd3f5e4e2e3155 jdk-1_5_0_10-dlj-linux-i586.bin 49553457
+SHA256 e4300d88ae630f02132a4ce23afbdc40f994de91b37d4b64cb1da0b58df678fa jdk-1_5_0_10-dlj-linux-i586.bin 49553457
